--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #919191;
 }
 
 .overlay-mf {
@@ -352,7 +352,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #919191;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -1284,7 +1284,7 @@ footer {
   text-align: center;
   color: #fff;
   padding: 25px 0;
-  background: #0062d3;
+  background: #8d8d8d;
 }
 footer .copyright {
   margin-bottom: 0.3rem;
